Create the correct routes for the collections
